--- a/TodoApp/Base.lproj/Main.storyboard
+++ b/TodoApp/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
             <objects>
                 <viewController id="2bS-fn-pzi" customClass="TodoController" customModule="PackApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0mY-de-rnO">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="756"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleAspectFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="WtA-7I-gkf">
@@ -61,7 +61,7 @@
                             <barButtonItem title="Suggestions" style="plain" id="D5Q-aI-z6I">
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
-                                    <segue destination="S1T-l8-V2C" kind="show" id="pix-Sd-v7j"/>
+                                    <segue destination="S1T-l8-V2C" kind="show" identifier="toDoToSuggestions" id="pix-Sd-v7j"/>
                                 </connections>
                             </barButtonItem>
                         </rightBarButtonItems>
@@ -152,11 +152,11 @@
             <objects>
                 <viewController id="S1T-l8-V2C" customClass="SuggestionViewController" customModule="PackApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mZ5-a9-01e">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="756"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="a8T-ZW-ImO">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="673"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellID" id="DbN-gK-HlC" customClass="ItemCell" customModule="PackApp" customModuleProvider="target">
@@ -183,7 +183,6 @@
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="80j-RS-cCF">
                             <connections>
                                 <action selector="saveSuggestions:" destination="S1T-l8-V2C" id="wmc-PX-NN0"/>
-                                <segue destination="2bS-fn-pzi" kind="presentation" identifier="suggestionToTrip" id="dpM-LQ-HIF"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -196,7 +195,4 @@
             <point key="canvasLocation" x="4128" y="240"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="dpM-LQ-HIF"/>
-    </inferredMetricsTieBreakers>
 </document>
